crealead_trainings up: CSS code updated: margin-bottom added to logo to prevent overlapping with the recommendation link.

--- a/repository/modules/features/crealead_trainings/css/crealead_trainings.css
+++ b/repository/modules/features/crealead_trainings/css/crealead_trainings.css
@@ -15,6 +15,9 @@
     position: relative;
 }
 
+.field-name-field-brand-logo {
+    margin-bottom: 20px;
+}
 .field-name-recommendations-number {
     margin: 10px 0 30px;
 }
